--- a/Ictshop/Views/Home/Index.cshtml
+++ b/Ictshop/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 <div class="spnoibat">
     <div class="row">
 
-        <h3> SẢN PHẨM</h3>
+        <h3> SẢN PHẨM NỔI BẬT</h3>
         <div class="col-md-4">
             <img src="~/HinhanhSP/spnb1.png" class="img-responsive" alt="" />
         </div>
